# Finance

stock-estimation/: .gitignore  README.md  pyproject.toml
stock-estimation/data/: 0050.TW_2018-01-01_2026-06-20.csv  00631L.TW_2018-01-01_2026-06-20.csv
stock-estimation/src/stock_analysis/: cli.py  config.py  data.py  drawdown_events.py  plot.py  tickers.py
stock-estimation/src/tw_etf_backtest/: cli.py  config.py  data.py  drawdown_events.py  metrics.py  plot.py  strategy.py  text_format.py
