[project]
name = "stock-analysis"
version = "0.1.0"
description = "Backtest and drawdown analysis for base/leveraged ETF pairs across markets"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "yfinance>=1.4.1",
]

[project.scripts]
stock-analysis = "stock_analysis.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stock_analysis"]
